Add age variables

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <input type="number" name="age" id="inputAge">  
             </div>
             
-            <button id="button">Invia dati</button>
+            <button type="button" id="button">Invia dati</button>
         </form>
 
         <p id="output">
